--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-redux": "^6.0.9",
     "@types/react-test-renderer": "^16.0.2",
     "@types/redux-promise-middleware": "0.0.11",
+    "axios": "^0.18.0",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.45.6",
